# Quartet-II

./: .gitignore  README.md  requirements.txt  shame.sh  sweep_tokens_backward.sh
data/: 46_concentration.json  nvidia_concentration.json  quartetII_concentration.json  tetrajetv2_concentration.json
for_plots/: runs.json
kernels/: CMakeLists.txt  pyproject.toml
kernels/csrc/: binding.cpp  dq_tp_q.cu  group_transform.cu  group_transform_and_eden.cu  had128_utils.cuh  rht128.cu  rht128_eden.cu  rht128_requant.cu  rht128_tma.cu  rht128_ws.cu  round_eden_fp4.cu  round_four_six.cu  strided_iter.cuh  utils.cuh  vec.cuh
kernels/python/quartet2/: linear.py  quant.py  rht.py
kernels/test/: bench_linear.py  quartet.py  test_linear.py  test_rht.py  test_rounding.py
notebooks/: benchmark_nvfp4.ipynb  concentration.ipynb  plots.ipynb  unbiasedness.ipynb
scripts/: backward_node.sh  backward_sweep.sh  baseline_node.sh  baseline_sweep.sh  bnrq_node.sh  bnrq_sweep.sh  forward_node.sh  forward_sweep.sh  fq_node.sh  fq_sweep.sh  nvidia_node.sh  nvidia_sweep.sh  nwrq_node.sh  nwrq_sweep.sh  quartet_node.sh  quartet_sweep.sh  quartetv2_node.sh  quartetv2_sweep.sh  tetrajetv2_node.sh  tetrajetv2_sweep.sh
src/config/: base.py
src/models/: base.py  llama.py
src/models/quantization/: __init__.py  backward.py
src/models/quantization/quantizers/: __init__.py  eden.py  mxfp4.py  nvfp4.py  nvfp4_triton.py
src/models/quantization/schemes/: __init__.py  nvidia.py  quartet_2.py  tetrajetv2.py
src/optim/: base.py
